--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,7 +28,7 @@ jobs:
           wget https://raw.githubusercontent.com/aosp-mirror/platform_build/master/target/product/security/testkey.pk8
           wget https://raw.githubusercontent.com/aosp-mirror/platform_build/master/target/product/security/testkey.x509.pem
 
-          unsigned_apk=$(ls app/build/outputs/apk/release/*-unsigned.apk)
+          unsigned_apk=$(ls app/build/outputs/apk/release/*.apk)
           apksigner sign \
             --key testkey.pk8 \
             --cert testkey.x509.pem \
